fix page width problem when text get too long

--- a/frontend/src/js/dumpbucket/main.scss
+++ b/frontend/src/js/dumpbucket/main.scss
@@ -1,12 +1,26 @@
 .dumpbucket {
     height: 100%;
     width: 100%;
+    display: flex;
+    justify-content: center;
 
+    @media (min-width: 992px){
+        &-container {
+            min-width: 300px;
+            max-width: 1200px;
+            width: 60%;
+            margin: auto;
+            padding: 30px 0;
+        }
+    }
 
+    @media (max-width: 991px){
     &-container {
         min-width: 300px;
         max-width: 1200px;
-        width: 50%;
+        width: 90%;
         margin: auto;
+        padding: 30px 0;
     }
+}
 }
